# smart-rte

./: .gitignore  .npmrc  Cargo.toml  DOCUMENTATION_DEPLOYMENT.md  NPM_GITHUB_CONNECTION.md  README.md  TABLE-RESIZE-README.md  flutter.pubspec.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  table-resize-code.tsx  table-resize-implementation.md
.github/workflows/: flutter.yml  js.yml  publish.yml  rust.yml
apps/demo-next/: README.md
apps/docs/: README.md
dart/example_app/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
dart/example_app/.dart_tool/: package_config.json  package_config_subset
dart/example_app/.dart_tool/extension_discovery/: vs_code.json
dart/smartrte_flutter/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/smartrte_flutter/.dart_tool/: package_config.json  package_config_subset
dart/smartrte_flutter/.dart_tool/extension_discovery/: vs_code.json
dart/smartrte_flutter/assets/editor/: editor.js  index.html
dart/smartrte_flutter/lib/: classic_editor.dart  smartrte_flutter.dart
prisma/: schema.prisma
rust/smart_rte_core/: Cargo.toml
rust/smart_rte_core/src/: comments.rs  doc.rs  history.rs  import_export.rs  lib.rs  ops.rs  selection.rs
rust/smart_rte_ffi/: Cargo.toml
rust/smart_rte_ffi/src/: lib.rs
rust/smart_rte_wasm/: Cargo.toml
rust/smart_rte_wasm/src/: lib.rs
tools/: frb-bindings.sh  wasm-build.sh
tools/scripts/: build-wasm.sh
