[package]
name = "smart_rte_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "smart_rte_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
smart_rte_core = { path = "../smart_rte_core" }
flutter_rust_bridge = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }

[features]
default = []
frb = ["flutter_rust_bridge"]


